--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(td2)
 set(CMAKE_CXX_STANDARD 23)
 
 add_executable(td2 main.cpp
-        Source/point.cpp
+        source/point.cpp
         header/point.h
-        Source/circle.cpp
+        source/circle.cpp
         header/circle.h)
